--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -216,103 +216,17 @@
 		
 		private function test(event:Event):void
 		{
-			var  sqlConnection:SQLConnection = new SQLConnection();
-			var newFile:File = File.applicationStorageDirectory.resolvePath("HelpDB.db");
+			var sql_1:Sql = new Sql();
+			var sql_2:Sql = new Sql();
 			
-			// Database has a table "employee" with columns
-			// employeeID, firstName, lastName, birthday
-//			conn.open();
+			sql_1.creatDB();
+			sql_1.locale("en_US");
+			sql_1.getLocale();
 			
-			try {
-				
-				sqlConnection.open(newFile, SQLMode.CREATE );
-				
-//				fileStream.open(newFile, FileMode.WRITE);
-//				fileStream.writeBytes(content);
-//				fileStream.close();
-				
-			} catch(error:IOError) {
-//				var er:* =  error;
-				trace("!!!!!!!!!!!!!!!! Error Creating 'HelpDB.db'  !!!!!!!!!!!!!!! \n" + error.message );
-				return;
-			}
 			
-			try {
-				var selectStatement:SQLStatement = new SQLStatement();
-				selectStatement.sqlConnection = sqlConnection;
-				selectStatement.text = "CREATE TABLE page (id INTEGER PRIMARY KEY AUTOINCREMENT, name TEXT NOT NULL,  data TEXT, resources TEXT, id_help INTEGER NOT NULL);";
-				selectStatement.execute();
-				
-				selectStatement.text = "CREATE TABLE help (id INTEGER PRIMARY KEY AUTOINCREMENT, toc XML, id_product INTEGER NOT NULL, id_locale INTEGER NOT NULL);";
-				selectStatement.execute();
-				
-				
-				selectStatement.text = "CREATE TABLE product (id INTEGER PRIMARY KEY AUTOINCREMENT, name CHAR NOT NULL, version CHAR NOT NULL);";
-				selectStatement.execute();
-				
-				selectStatement.text = "CREATE TABLE locale (id INTEGER PRIMARY KEY AUTOINCREMENT, name CHAR NOT NULL);";
-				selectStatement.execute();
-				
-				sqlConnection.close();
-				
-			} catch (err:SQLError) {
-				// since there is no column "name", an error will be thrown
-				localizeError(err);
-			}
-			function localizeError(e:SQLError):void 
-			{
-				var argsLength:int = e.detailArguments.length;
-				switch (e.detailID) 
-				{
-					case 2030:
-					// default details string: "trigger '%s' already exists"
-					// do stuff
-						break;
-					// ... other cases ...
-					case 2036:
-					// default details string: "no such column: '%s[.%s[.%s]]'"
-						var colPath:String = "";
-						if (argsLength == 1) 
-						{
-							colPath = e.detailArguments[0];
-						} else if (argsLength == 2) 
-						{
-							colPath = e.detailArguments[0]+"."+e.detailArguments[1];
-						} else if (argsLength == 3) 
-						{
-							colPath = e.detailArguments[0]+"."+e.detailArguments[1]+"."+e.detailArguments[2];
-						}
-			// or use the locale information to generate a localized string
-						displayLocalizedDetail("Column '" + colPath + "' does not exist.");
-						break;
-				default:
-					displayLocalizedDetail(e.details);
-			}
-			}
-			function displayLocalizedDetail(str:String):void 
-			{
-				trace(str)
-			// display error detail
-			}
-//			------------------
-		/*	var newFile:File = File.applicationStorageDirectory.resolvePath("db");
-			var  sqlConnection:SQLConnection = new SQLConnection();
+//			sql_2.creatDB();
 			
-			try {
-				
-				sqlConnection.open(newFile, SQLMode.CREATE );
-				sqlConnection.close();
-//				fileStream.open(newFile, FileMode.WRITE);
-//				fileStream.writeBytes(content);
-//				fileStream.close();
-				
-			} catch(error:IOError) {
-//				var er:* =  error;
-				trace("!!!!!!!!!!!!!!!! Error Write !!!!!!!!!!!!!!! \n" + error.message );
-				return;
-			}
-//				sqlConnection.
-	*/	}
+		}
 	]]>
 </mx:Script>
 	<mx:Tree id="tree" x="81" y="70" width="145" height="249"
