git-svn-id: http://svn.vdombox.ru/flextools/trunk@3519 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Builder.mxml
+++ b/PowerPack/v.01/PowerPack/src/Builder.mxml
@@ -330,6 +330,8 @@
 					}
 				
 					ContextManager.instance.templates.removeItemAt(0);
+					tpl.dispose();
+					tpl = null;
 				}
 				
 	   	  		ContextManager.instance.lastFile = false;
