--- a/IDE/v.01/vdom/components/edit/Edit.mxml
+++ b/IDE/v.01/vdom/components/edit/Edit.mxml
@@ -40,23 +40,24 @@
 	
 	<mx:VDividedBox id="panelContainer"
 		paddingRight="2" width="220" minWidth="220"
-		verticalGap="5" 
-		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
+		verticalGap="5"
+		verticalScrollPolicy="off">
 		
 		<editContainers:AttributesPanel id="attributesPanel"
 			title="{resourceManager.getString('Edit','attributes_title')}"
 			acceptLabel="{resourceManager.getString('Edit','attributes_save')}" 
 			deleteLabel="{resourceManager.getString('Edit','attributes_delete')}"
-			width="100%" headerHeight="30"/>
+			width="100%" headerHeight="30" height="250" minHeight="30"/>
 		
 		<containers:ClosablePanel id="helpPanel" 
-			title="{resourceManager.getString('Edit','help_title')}" 
-			width="100%" >
-			
-			<mx:Text htmlText="{attributesPanel.help}" condenseWhite="true" width="100%" minHeight="0"/>
+			title="{resourceManager.getString('Edit','help_title')}"
+			width="100%" minHeight="20" height="50">
+
+			<mx:Text htmlText="{ attributesPanel.help }" condenseWhite="true" width="100%" minHeight="0"/>
 		</containers:ClosablePanel>
 		
 		<editContainers:ObjectsPanel id="pageList"
-			title="{resourceManager.getString('Edit','pages_title')}" y="50" width="100%"  height="100%"/> 							
+			title="{resourceManager.getString('Edit','pages_title')}"
+			width="100%" minHeight="20" height="100%"/> 							
 	</mx:VDividedBox>
 </mx:HDividedBox>
