--- a/IDE/v.01/vdom/components/eventEditor/EventEditor.mxml
+++ b/IDE/v.01/vdom/components/eventEditor/EventEditor.mxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:HDividedBox xmlns:mx="http://www.adobe.com/2006/mxml" 
 	creationComplete="creationCompleteHandler()" 
-	  backgroundColor="#3d3d3d" 
+	backgroundColor="#3d3d3d" 
 	xmlns:eventEditor="vdom.components.eventEditor.*" show="showHandler()" 
 	hide="hideHandler()" xmlns:containers="vdom.containers.*">
 	<mx:Metadata>
@@ -79,6 +79,14 @@
 	 		{
 	 			dataManager = DataManager.getInstance();
 	 		}
+	 		
+	 		override protected function updateDisplayList( unscaledWidth : Number, 
+													unscaledHeight : Number ) : void
+			{
+				super.updateDisplayList( unscaledWidth, unscaledHeight );
+				vBox.height = unscaledHeight;
+				panelContainer.height = unscaledHeight;
+			}
 	 		
 //	 		private var changeWatcher:ChangeWatcher ;
 	 		private function showHandler():void
@@ -1003,37 +1011,39 @@
 	          </mx:Canvas>
 		</mx:VDividedBox>
 		-->
-        <mx:VBox id="vBox" width="100%" height="100%"  paddingLeft="10" paddingTop="10">
-            <mx:Canvas id="can" width="100%" height="100%"
-            		backgroundColor="#7B7B7B"
-            	 	dragEnter="dragEnterHandler(event);" 
-    				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF"/>
-             <mx:HBox paddingBottom="10" >
-            	<mx:Button id="btSave" label="Save" click="{creatDataToServer()}"/>
-	            <mx:Button label="Revert" click="{revert()}"/>
-            </mx:HBox>
-        </mx:VBox>
-	        <mx:VBox  width="250" height="{can.height + 30}"  minWidth="250"
-	        	verticalGap="10"   paddingLeft="3" paddingRight="10" paddingTop="10"
-	        		verticalScrollPolicy="auto" horizontalScrollPolicy="off"  >
-			        <mx:Panel title="PAGES" width="100%" color="#FFFFFF" >
-				        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"
-			        	 rowCount="20" change="{changeContainerHandler(event.target)}"   
-			        		color="#000000" minWidth="200" width="100%" itemRenderer="vdom.components.eventEditor.PanelItemRender"/>
-	       			 </mx:Panel>
-		        <eventEditor:ContainersBranch id="containersBranch" width="100%"  title="Objects"/>
-		        
-		        <containers:ClosablePanel width="100%"  title="Events" >
-		        	<eventEditor:TreeEvents id="treeEvents" width="100%" />
-		        </containers:ClosablePanel>
-		        
-		        <containers:ClosablePanel width="100%" title="Actions" >
-		        	<eventEditor:TreeActions id="treeActions" width="100%" />
-		        </containers:ClosablePanel>
-		      
-	        </mx:VBox>
-        
-	</mx:HDividedBox>
+    <mx:VBox id="vBox" width="100%" height="100%"  paddingLeft="10" paddingTop="10">
+        <mx:Canvas id="can" width="100%" height="100%"
+        		backgroundColor="#7B7B7B"
+        	 	dragEnter="dragEnterHandler(event);" 
+				dragDrop="dragDropHandler(event);" borderColor="#DFDFDF"/>
+     	<mx:HBox paddingBottom="10" >
+    		<mx:Button id="btSave" label="Save" click="{creatDataToServer()}"/>
+        	<mx:Button label="Revert" click="{revert()}"/>
+    	</mx:HBox>
+    </mx:VBox>
+    <mx:VDividedBox id="panelContainer" paddingRight="2" width="220" minWidth="220"
+		verticalGap="5"
+		verticalScrollPolicy="off" height="100%">
 		
-
+        <containers:ClosablePanel title="PAGES"
+        	width="100%" maxHeight="55"
+        	color="#FFFFFF">
+	        <mx:ComboBox id="changeContainer" dataProvider="{arrAppl}"
+        	 rowCount="20" change="{changeContainerHandler(event.target)}"   
+        		color="#000000" minWidth="200" width="100%" itemRenderer="vdom.components.eventEditor.PanelItemRender"/>
+   		 </containers:ClosablePanel>
+   		 
+        <eventEditor:ContainersBranch id="containersBranch" width="100%"  title="Objects"/>
+        
+        <containers:ClosablePanel width="100%"  title="Events" >
+        	<eventEditor:TreeEvents id="treeEvents" width="100%" />
+        </containers:ClosablePanel>
+        
+        <containers:ClosablePanel width="100%" title="Actions" >
+        	<eventEditor:TreeActions id="treeActions" width="100%" />
+        </containers:ClosablePanel>
+      
+    </mx:VDividedBox>
+        
+</mx:HDividedBox>
 
