git-svn-id: http://svn.vdombox.ru/flextools/trunk@3576 230e8929-42e3-3b44-a413-55659dd3a577

--- a/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
+++ b/TypeEditor/v.01/src/VdomObjectTypeEditor.mxml
@@ -448,7 +448,7 @@
 				
 				<mx:HBox width="100%">
 					<mx:Button label="Add" icon="@Embed('/icons/list-add.png')" click="{addResource();}" />
-					<mx:Button label="Remove" icon="@Embed('/icons/list-remove.png')" />
+					<mx:Button label="Remove" icon="@Embed('/icons/list-remove.png')" click="{removeResourceBtnClickHandler();}" />
 					<mx:Button label="Replace" icon="@Embed('/icons/refresh.png')" />
 				</mx:HBox>
 			</mx:VBox>
