Change for panels
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3585 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/edit/Edit.mxml
+++ b/IDE/v.01/vdom/components/edit/Edit.mxml
@@ -47,17 +47,17 @@
 			title="{resourceManager.getString('Edit','attributes_title')}"
 			acceptLabel="{resourceManager.getString('Edit','attributes_save')}" 
 			deleteLabel="{resourceManager.getString('Edit','attributes_delete')}"
-			width="100%" headerHeight="30" height="250" minHeight="30"/>
+			width="100%" headerHeight="30" height="250" minHeight="30" />
 		
 		<containers:ClosablePanel id="helpPanel" 
 			title="{resourceManager.getString('Edit','help_title')}"
 			width="100%" minHeight="20" height="50">
 
-			<mx:Text htmlText="{ attributesPanel.help }" condenseWhite="true" width="100%" minHeight="0"/>
+			<mx:Text htmlText="{ attributesPanel.help }" condenseWhite="true" width="100%"/>
 		</containers:ClosablePanel>
 		
 		<editContainers:ObjectsPanel id="pageList"
 			title="{resourceManager.getString('Edit','pages_title')}"
-			width="100%" minHeight="20" height="100%"/> 							
+			width="100%" height="150"/> 							
 	</mx:VDividedBox>
 </mx:HDividedBox>
