--- a/IDE/v.01/vdom/components/edit/containers/ObjectsPanel.mxml
+++ b/IDE/v.01/vdom/components/edit/containers/ObjectsPanel.mxml
@@ -224,7 +224,7 @@ xmlns:containers="vdom.components.edit.containers.*" >
 	]]>
 </mx:Script>
 
-	<containers:OTree id="tree"  width="100%"  openDuration="0"/>
+	<containers:OTree id="tree"  width="100%"  openDuration="0" height="100%"/>
 
 	
 </ClosablePanel>
