git-svn-id: http://svn.vdombox.ru/flextools/trunk@3643 230e8929-42e3-3b44-a413-55659dd3a577

--- a/Help/Reader/v.01/src/VdomHelp.mxml
+++ b/Help/Reader/v.01/src/VdomHelp.mxml
@@ -129,6 +129,19 @@
 				var pageLocation:String = location + pageName;
 //				sqlProxy.
 				
+				
+				var rez:Object = sqlProxy.setPage(productName, language, pageLocation, version, title, description, content);
+				
+				if (rez == null)
+					return;
+					
+				if (rez as Array)
+				{
+					trace("delete Old Resources");
+				}
+				
+				
+				
 				var byteArray:ByteArray = new ByteArray();
 					byteArray.writeMultiByte(page.content.toString()+"\n", "UTF-8");
 //				var fileName:String = pageName;
@@ -137,7 +150,6 @@
 				
 				arrayOfPages[pageLocation] = true;
 				
-				sqlProxy.setPage(productName, language, pageLocation, version, title, description, content);
 				
 				//*************  Creat Resources  ***************//
 				for each(var resource:XML in page.resources.children())
