git-svn-id: http://svn.vdombox.ru/flextools/trunk@3656 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/Generator.mxml
+++ b/PowerPack/v.01/PowerPack/src/Generator.mxml
@@ -150,7 +150,7 @@
 	            ContextManager.loadSettings();
 	            
 	            // Fill language menu
-	            MenuGeneral.updateLangMenu(fileMenuData);
+	            MenuGeneral.updateLangMenu();
 	            
 	            // fill last files menu
 	            MenuGeneral.updateLastFilesMenu(fileMenuData);
