git-svn-id: http://svn.vdombox.ru/flextools/trunk@3683 230e8929-42e3-3b44-a413-55659dd3a577

--- a/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ImportFromTpl.mxml
+++ b/PowerPack/v.01/PowerPack/src/PowerPack/com/dialog/ImportFromTpl.mxml
@@ -99,7 +99,9 @@
             		if(event.target.txtKey.text)
             		{
             			template.key = event.target.txtKey.text;
-            			template.decode();
+            			
+            			template.processOpened();
+            			
             			if(template.xmlStructure)
             			{
             				populateList();	
