RichText editing fix MultilineWindow inserting fix
git-svn-id: http://svn.vdombox.ru/flextools/trunk@3684 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/controls/multiLine/MultiLineWindow.mxml
+++ b/IDE/v.01/vdom/controls/multiLine/MultiLineWindow.mxml
@@ -126,6 +126,7 @@ private function insertPageLink():void
 	
 	textFiled.text = textFiled.text.substring(0, index) + "/" + XML(pageList.selectedItem).@ID + ".vdom" + textFiled.text.substring(index);
 	textFiled.setSelection(index, index);
+	textFiled.dispatchEvent( new Event( Event.CHANGE ) );
 }
 
 private function insertResourceLink():void
@@ -135,13 +136,13 @@ private function insertResourceLink():void
 	
 	textFiled.text = textFiled.text.substring(0, index) + "#Res(" + XML(resourceList.selectedItem).@id + ")" + textFiled.text.substring(index);
 	textFiled.setSelection(index, index);
-	textAreaContainer.invalidateProperties();
+	textFiled.dispatchEvent( new Event( Event.CHANGE ) );
 }
 
 ]]>
 </mx:Script>
 
-<mx:TextArea width="100%" height="100%" id="textAreaContainer" creationComplete="init();" text="{attributeValue}" fontFamily="Tahoma"/>
+<mx:TextArea width="100%" height="100%" id="textAreaContainer"  text="{attributeValue}" fontFamily="Tahoma"/>
 
 <mx:ControlBar horizontalAlign="right"
 	paddingLeft="8" paddingRight="8" paddingBottom="5">
