--- a/IDE/v.01/vdom/components/analyse/Analyse.mxml
+++ b/IDE/v.01/vdom/components/analyse/Analyse.mxml
@@ -1,57 +1,91 @@
 <?xml version="1.0" encoding="utf-8"?>
 <mx:Canvas 
 	xmlns:mx="http://www.adobe.com/2006/mxml"
-	backgroundColor="#ffffff" creationComplete="creationCompleteHendler();" xmlns:resourceBrowser="vdom.controls.resourceBrowser.*">
+	show="init();">
 	
 	<mx:Script>
 		<![CDATA[
-			import vdom.controls.externalEditorButton.ExternalEditorButton;
-			import vdom.controls.databaseEditor.dbStructureEditor;
-			import vdom.controls.resourceBrowser.ResourceBrowser;
-			import mx.managers.PopUpManager;
-			import mx.core.IFlexDisplayObject;
-			import mx.core.Application;
-			import vdom.managers.DataManager;
-			import mx.containers.TitleWindow;
+			import vdom.managers.FileManager;
+			import mx.core.IUITextField;
+			import vdom.events.FileManagerEvent;
+			import mx.controls.Alert;
+			import mx.core.UIComponent;
+			import vdom.components.analyse.managers.DbgRenderManager;
 			
-			[Bindable]
-			private var dataManager:DataManager;
-		//	[Bindable]
-			private var publicData:Object;
+			private var renderManager : DbgRenderManager = DbgRenderManager.getInstance();
+			private var fileManager:FileManager = FileManager.getInstance();
 			
-			private function creationCompleteHendler():void
+			private function _test() : void
 			{
-				dataManager = DataManager.getInstance();
-				__rBrowser.value = "#Res(eroweirf8df98dfygdyf)";
-				//publicData = Application.application.publicData; 
-				//trace('publicData: \n'+ publicData)
+				var uicomp : UIComponent;
+				var txt : String = textAreaContainer.text;
+				try
+				{
+					uicomp = renderManager.render( "", XML( txt ) );
+				}
+				catch( error : Error )
+				{
+					Alert.show( "Message: \n" + error.message, "Alert" );
+					return;
+				}
+				
+				if( !uicomp )
+				{
+					Alert.show( "Message: \n" + "Empty result", "Alert" );
+					return;
+				}
+				
+				res.removeAllChildren();
+				res.addChild( uicomp );
 				
 			}
-			
-			private function button1Click():void {
-				var exBtn:ExternalEditorButton = new ExternalEditorButton("58a4358d-2dce-4bd3-ace9-62a72316d84d", "d80c2af8-312c-43d3-bb1a-518f07cf698b", "192ae814-2258-481c-aaf9-c9a59aa0165c");
-				exBtn.width = 100;
-				exBtn.height = 22;
-				exBtn.x = 10;
-				exBtn.y = 65;
-				addChild(exBtn);
-				exBtn.value = "<TableStructure><TableDef id='ac73b296-d4f0-4a3e-b64c-19fe3fde0a5b' name='dbtable_ac73b296_d4f0_4a3e_b64c_19fe3fde0a5b'><ColumnDef id='djhgfkshdgfkjds' name='id' type='text'/><ColumnDef id='iueyhri843rhskj' name='name' type='text'/><ColumnDef id='dkjhgkdjfhgkjfv' name='pic' type='blob'/></TableDef><ChangeLog /></TableStructure>";
+			private function init():void
+			{
+				var tf:IUITextField = textAreaContainer.mx_internal::getTextField();
+				tf.alwaysShowSelection = true;
+				
+				fileManager.addEventListener(
+					FileManagerEvent.RESOURCE_LIST_LOADED, 
+					fileManager_resourceListLoaded
+				);
+				fileManager.getListResources();
 			}
 			
-					
-			private function resourceBrowserLauncher():void {
-				PopUpManager.createPopUp(this, ResourceBrowser, true);
+			private function fileManager_resourceListLoaded(event:FileManagerEvent):void
+			{
+				fileManager.removeEventListener(
+					FileManagerEvent.RESOURCE_LIST_LOADED, 
+					fileManager_resourceListLoaded
+				);
+				
+				resourceList.dataProvider = event.result.Resources.*
+				resourceList.enabled = true;
 			}
 			
-			private function dbStructureEditorLauncher():void {
-				PopUpManager.createPopUp(this, dbStructureEditor, true);
+			private function insertResourceLink():void
+			{
+				var textFiled:TextField = textAreaContainer.mx_internal::getTextField();
+				var index:int = textFiled.selectionBeginIndex;
+				
+				textFiled.text = textFiled.text.substring(0, index) + "#Res(" + XML(resourceList.selectedItem).@id + ")" + textFiled.text.substring(index);
+				textFiled.setSelection(index, index);
+				textFiled.dispatchEvent( new Event( Event.CHANGE ) );
 			}
-			
 		]]>
 	</mx:Script>
-	
-	<mx:Button id="test" x="10" y="10" label="Button" height="20" click="{button1Click();}"/>
-	<resourceBrowser:ResourceBrowserButton x="10" y="35" id="__rBrowser"/>
-	<mx:Button x="174" y="35" label="Open DB Structure Editor" height="20" click="{dbStructureEditorLauncher();}" />
+	<mx:HDividedBox width="100%" height="100%">
+		<mx:Canvas id="res" width="400" height="100%" backgroundColor="#FFFFFF">
+		</mx:Canvas>
+		<mx:VBox height="100%" horizontalAlign="right">
+			<mx:TextArea id="textAreaContainer" height="100%" width="100%" borderColor="#000000" wordWrap="false"/>
+			<mx:HBox>
+				<mx:Label text="Resources:"/>
+				<mx:ComboBox id="resourceList" labelField="@name"
+					width="130" cornerRadius="0" enabled="false"/>
+				<mx:Button label="ok" cornerRadius="0" click="insertResourceLink();"/>
+			</mx:HBox>
+			<mx:Button label="Apply" click="_test();"/>
+		</mx:VBox>
+	</mx:HDividedBox>
 			
 </mx:Canvas>
