--- a/IDE/v.01/vdom/modules/Editor.mxml
+++ b/IDE/v.01/vdom/modules/Editor.mxml
@@ -58,8 +58,8 @@
 		<!--<controls:ActionButton styleName="analyseButton"
 			label="Debug"
 			labelPlacement="bottom"
-			click="{placeCanvas.selectedChild=analyseCanv}"/>
-		
+			click="{placeCanvas.selectedChild=analyseCanv}"/>-->
+		<!--
 		<controls:ActionButton styleName="statisticsButton" 
 			label="{resourceManager.getString('Application','editor_statistics')}"
 			labelPlacement="bottom"/>-->
