git-svn-id: http://svn.vdombox.ru/flextools/trunk@3708 230e8929-42e3-3b44-a413-55659dd3a577

--- a/IDE/v.01/vdom/components/treeEditor/AddTreeElementWindow.mxml
+++ b/IDE/v.01/vdom/components/treeEditor/AddTreeElementWindow.mxml
@@ -261,9 +261,9 @@
     		selectionColor="#dbdbdb"   rollOverColor="#E5E5E5" />
     	
 	</mx:VBox>
-	<mx:ControlBar horizontalAlign="right"
+	<mx:ControlBar horizontalAlign="right" 
 			height="35" paddingTop="2" paddingBottom="2" paddingLeft="10" paddingRight="10" color="#FFFFFF" >
-    		<mx:Button id="OK" label="Ok" enabled="false"  click="okPressed()"/>
+    		<mx:Button id="OK" label="Ok" enabled="false"  click="okPressed()" width="60"/>
     		<mx:Button label="{resourceManager.getString('Tree','cancel')}" click="cancelPressed()"/>
 	</mx:ControlBar>
 </mx:TitleWindow>
